--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -2,7 +2,7 @@
     max-width: 1320px !important
 *
     font-family: 'Work Sans', sans-serif
-    color: #1D253C
+    // color: #1D253C !important
 a
     color: #1d253c
     &:hover
