--- a/src/sass/_safe.sass
+++ b/src/sass/_safe.sass
@@ -2,8 +2,22 @@
     text-align: center
     &__list
         display: flex
-        align-items: center
+        justify-content: center
+        // align-items: center
         &-item
-            display: flex
-            flex-direction: column
-            align-items: center
+            background-color: white
+            max-width: 320px
+
+
+
+            // display: flex
+            // flex-direction: column
+            // align-items: center
+            &:nth-child(1)
+                padding: 60px 0px 0px 0px
+            &:nth-child(2)
+                padding: 30px 0px 0px 0px
+            &:nth-child(3)
+                padding: 50px 0px 0px 0px
+            
+                            
